<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_text_drawn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:padding="16dp"
        android:text="@string/tv_text_drawn"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="44sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_play"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_black"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_circle_24"
        app:layout_constraintEnd_toStartOf="@id/tv_text_drawn"
        app:layout_constraintTop_toTopOf="@id/tv_text_drawn"
        app:tint="@color/black"
        android:contentDescription="@string/ct_drawn_black" />

    <ImageView
        android:id="@+id/iv_red"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_circle_24"
        app:layout_constraintBottom_toBottomOf="@id/tv_text_drawn"
        app:layout_constraintStart_toEndOf="@id/tv_text_drawn"
        app:tint="@android:color/holo_red_dark"
        android:contentDescription="@string/ct_drawn" />

    <TextView
        android:id="@+id/tv_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="16dp"
        android:text="@string/tv_text_drawn_hint"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/til_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_text_drawn" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_number"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/til_drawn_hint"
        app:layout_constraintEnd_toEndOf="@id/btn_play"
        app:layout_constraintStart_toStartOf="@id/btn_play"
        app:layout_constraintTop_toBottomOf="@id/tv_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:backgroundTint="@color/black"
        android:text="@string/btn_text_drawn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>